tests/paczka1/fuzzy1/80507066.err
Error in line 2: aK9o A665 71,7
Error in line 5: AfZGTr A960 10,7
Error in line 13: L5Es3E A665 76,5
Error in line 37: A665 A665 25,3
Error in line 36: aK9o A974 77,9
